--- a/package.json
+++ b/package.json
@@ -28,7 +28,21 @@
     "DOM"
   ],
   "dependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.3.0",
     "brisky-core": "^1.0.0"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
+    ]
   },
   "contributors": [
     "Jim de Beer <jim@vigour.io>",
