--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tape": "^4.4.0",
     "vigour-doc": "^1.1.5",
     "parse-element": "^2.0.1",
-    "vigour-util": "^3.0.0"
+    "vigour-util": "^3.0.0",
+    "vigour-state": "^3.0.0"
   }
 }
