--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Adds class property to Brisky",
   "main": "index.js",
   "scripts": {
-    "test": "node test | tap-difflet && standard",
+    "test": "(ducktape; node test) | tap-difflet && standard",
     "watch": "nodemon test | tap-difflet",
     "cover": "istanbul cover --report none --print detail test/index.js",
     "docs": "node_modules/vigour-doc/bin/vdoc",
@@ -48,6 +48,7 @@
     "Youri Daamen <youri@vigour.io>"
   ],
   "devDependencies": {
+    "ducktape": "^1.0.0",
     "budo": "^8.2.2",
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.3",
