--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vigour-doc": "^1.1.5",
     "parse-element": "^2.0.1",
     "vigour-util": "^3.0.0",
-    "vigour-state": "^4.0.1"
+    "vigour-state": "^4.0.1",
+    "vigour-performance": "^1.0.0"
   }
 }
