--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "(ducktape; node test) | tap-difflet && standard",
-    "watch": "nodemon test | tap-difflet",
-    "watch-browser": "budo test/index.js --css bundle.css --live",
+    "dev": "nodemon test | tap-difflet",
+    "dev-browser": "budo test/index.js --css bundle.css --live",
     "cover": "istanbul cover --report none --print detail test/index.js",
     "docs": "node_modules/vigour-doc/bin/vdoc",
     "travis": "npm run cover -s && istanbul report lcov && ((cat coverage/lcov.info | coveralls) || exit 0) && standard"
