--- a/package.json
+++ b/package.json
@@ -28,22 +28,12 @@
     "DOM"
   ],
   "dependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.3.0",
-    "brisky-core": "^1.7.5",
-    "postcssify": "^2.1.3"
+    "bubleify": "0.5.1",
+    "brisky-core": "^1.7.5"
   },
   "browserify": {
     "transform": [
-      "postcssify",
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
+      "bubleify"
     ]
   },
   "contributors": [
