--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
   ],
   "dependencies": {
     "bubleify": "0.5.1",
-    "brisky-core": "^1.7.5"
+    "brisky-core": "^1.7.5",
+    "postcssify": "^2.5.0"
   },
   "browserify": {
     "transform": [
-      "bubleify"
+      "bubleify",
+      "postcssify"
     ]
   },
   "contributors": [
